# nix-archiver

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  LOGGING.md  PERFORMANCE.md  QUICK_START.md  README.md  ROADMAP.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  default.nix  flake.nix  frozen.nix  module.nix  packages.nix  shell.nix  spec.md
crates/archiver-cli/: Cargo.toml
crates/archiver-cli/src/: helpers.rs  main.rs  output.rs
crates/archiver-cli/src/commands/: generate.rs  index.rs  mod.rs  prefetch_hashes.rs  search.rs  stats.rs
crates/archiver-cli/tests/: cli.rs
crates/archiver-core/: Cargo.toml
crates/archiver-core/src/: error.rs  lib.rs  models.rs
crates/archiver-core/tests/: models.rs
crates/archiver-db/: Cargo.toml
crates/archiver-db/src/: database.rs  lib.rs
crates/archiver-db/tests/: database.rs
crates/archiver-index/: Cargo.toml
crates/archiver-index/src/: formatting.rs  indexer.rs  lib.rs  nar.rs  parsers.rs  processing.rs  stats.rs
crates/archiver-index/src/parsers/: ast_parser.rs  mod.rs  regex_fallback.rs
crates/archiver-index/src/processing/: commit.rs  file.rs  indexing.rs  mod.rs
crates/archiver-index/tests/: nar.rs  parsing.rs
docs/: architecture.md  nixos-module.md  usage.md
examples/nixos/: README.md  advanced.nix  configuration.nix  indexer-only.nix  minimal.nix
modules/: README.md  nix-archiver.nix  options.nix
