[workspace]
members = [
    "crates/archiver-core",
    "crates/archiver-db",
    "crates/archiver-index",
    "crates/archiver-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Wspólne modele i typy
archiver-core = { path = "crates/archiver-core" }
archiver-db = { path = "crates/archiver-db" }
archiver-index = { path = "crates/archiver-index" }

# Serializacja
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchroniczność
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Obsługa błędów i logi
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Baza danych i Git
sled = "0.34"
git2 = { version = "0.18", features = ["vendored-openssl", "vendored-libgit2"] }

# Kryptografia i Nix-specyficzne
sha2 = "0.10"
data-encoding = "2.5" # Do Base32 (Nix style)
nix-nar = "0.2"
semver = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
strsim = "0.11"

# Testing
tempfile = "3.10"
regex = "1.10"