[workspace]
members = [
    "crates/archiver-core",
    "crates/archiver-db",
    "crates/archiver-index",
    "crates/archiver-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DemwE/nix-archiver"
authors = ["DemwE"]

[workspace.dependencies]
# Shared models and types
archiver-core = { path = "crates/archiver-core" }
archiver-db = { path = "crates/archiver-db" }
archiver-index = { path = "crates/archiver-index" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"

# Parallel processing
rayon = "1.11.0"

# Error handling and logging
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11.9"

# Database and Git
sled = "0.34.7"
git2 = { version = "0.20.4", features = ["vendored-openssl", "vendored-libgit2"] }

# Cryptography and Nix-specific
sha2 = "0.10.9"
data-encoding = "2.10.0" # For Base32 (Nix style)
nix-nar = "0.3.1"
semver = "1.0.27"

# CLI
clap = { version = "4.5.60", features = ["derive"] }
strsim = "0.11.1"
tabled = "0.20.0"
chrono = "0.4.44"
colored = "2.1.0"

# Nix parsing
rnix = "0.14.0"
rowan = "0.16"

# Binary serialization
bincode = "1.3.3"

# Testing
tempfile = "3.26.0"
regex = "1.12.3"