[package]
name = "archiver-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archiver-core = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
data-encoding = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
