[package]
name = "archiver-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archiver-core = { workspace = true }
archiver-db = { workspace = true }
git2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
rnix = { workspace = true }
rowan = { workspace = true }
